fix: cors config