@@ -6,7 +6,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.List;
+import java.util.Arrays;
 
 import static java.util.Arrays.asList;
 
@@ -16,22 +16,22 @@ public class CorsConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(
-                asList(
-                        "https://baking-buddy-frontend-h5cn.vercel.app", // 모든 서브도메인 허용
-                        "https://localhost:*", // 모든 포트 허용
-                        "http://localhost:*"
+        configuration.setAllowedOrigins(
+                asList("http://localhost:3001"
+                        , "http://localhost:3002"
+                        , "http://localhost:3000"
+                        , "http://localhost:8080"
+                        , "https://baking-buddy-frontend-h5cn.vercel.app"
+                        , "https://cookingbunnies.du.r.appspot.com"
                 ));
-        configuration.setAllowedMethods(asList("GET", "POST", "PUT", "DELETE","OPTIONS"));
-//        configuration.setAllowedHeaders(asList("*"));
-        configuration.setAllowedHeaders(List.of(
-                "Authorization",
+        configuration.setAllowedMethods(asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList(
                 "Content-Type",
+                "Authorization",
                 "X-Requested-With",
                 "Accept",
-                "Origin",
-                "Access-Control-Request-Method",
-                "Access-Control-Request-Headers"
+                "accessToken",
+                "refreshToken"
         ));
         configuration.setAllowCredentials(true);
 
